Further SynMat work
Continuing work on SynthesisMaterial saveFile